# json-spec

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  LICENSE  MANIFEST.in  Makefile  README.rst  coverage.xml  pyproject.toml  requirements-pypy.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: authors.rst  cli.rst  conf.py  history.rst  index.rst  installation.rst  json-pointer.rst  json-reference.rst  json-schema.rst  operations.rst  pointer.rst  reference.rst  requirements.txt  schema.rst  usage.rst  validators.rst
examples/: basic.json  basic.py  simple.json  simple.py  test.py
src/json/: __init__.py  parser.py
src/json/misc/: providers.py
src/json/pointer/: __init__.py  bases.py  exceptions.py
src/json/reference/: __init__.py  bases.py  exceptions.py  providers.py  util.py
src/json/schema/: __init__.py  bases.py  draft04.py  exceptions.py  util.py
src/jsonspec/: __init__.py  _compat.py  _version.py  cli.py  driver.py
src/jsonspec/cli/: __init__.py  parsers.py
src/jsonspec/operations/: __init__.py  bases.py  exceptions.py
src/jsonspec/pointer/: __init__.py  bases.py  exceptions.py  stages.py
src/jsonspec/reference/: __init__.py  bases.py  exceptions.py  providers.py  util.py
src/jsonspec/schema/: __init__.py  bases.py  draft04.py  exceptions.py  util.py
src/jsonspec/validators/: __init__.py  bases.py  collections.py  draft03.py  draft04.py  exceptions.py  factorize.py  formats.py  pointer_util.py  types.py  util.py
src/jsontools/: __init__.py  cli.py  exceptions.py  parser.py  util.py
src/jsontools/schema/: __init__.py  bases.py  draft04.py  validators.py
src/jsontools/schema/validators/: __init__.py  bases.py  primitives.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_draft03.py  test_draft04.py  test_errors.py  test_errors2.py  test_fixes.py  test_fs_provider.py  test_github.py  test_operations.py  test_pointer.py  test_provider.py  test_python-jsontools.py  test_reference.py  test_schemas.py  test_util.py  test_validate_types.py  test_validators.py  test_validators_objects.py
tests/fixtures/: first.data1.json  first.data2.json  first.schema.json  five.schema.json  four.base.schema.json  four.data.json  four.entry.schema.json  second.data1.json  second.schema.json  three.data1.json  three.data2.json  three.schema.json
tests/fixtures/fs/: foo.json
tests/fixtures/fs/foo/: bar.json
