[tool.poetry]
name = "json-spec"
version = "0.12.0"
description = "Implements JSON Schema, JSON Pointer and JSON Reference."
authors = ["Xavier Barbosa <clint.northwood@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://json-spec.readthedocs.org"
repository = "https://github.com/johnnoone/json-spec"
documentation = "https://json-spec.readthedocs.org"
keywords = [
    "json",
    "utilitaries",
    "validation",
    "json-pointer",
    "json-reference",
    "json-schema",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "jsonspec", from = "src" }]

# include = [ "jsonspec/misc/schemas/**/*.json" ]

[tool.poetry.extras]
cli = ["termcolor"]

[tool.poetry.scripts]
json = "jsonspec.cli:main"

[tool.poetry.plugins."jsonspec.cli.commands"]
validate = "jsonspec.cli:ValidateCommand"
extract = "jsonspec.cli:ExtractCommand"
add = "jsonspec.cli:AddCommand"
remove = "jsonspec.cli:RemoveCommand"
replace = "jsonspec.cli:ReplaceCommand"
move = "jsonspec.cli:MoveCommand"
copy = "jsonspec.cli:CopyCommand"
check = "jsonspec.cli:CheckCommand"

[tool.poetry.plugins."jsonspec.reference.contributions"]
spec = "jsonspec.reference.providers:SpecProvider"

[tool.poetry.plugins."jsonspec.validators.formats"]
email = "jsonspec.validators.util:validate_email"
hostname = "jsonspec.validators.util:validate_hostname"
ipv4 = "jsonspec.validators.util:validate_ipv4"
ipv6 = "jsonspec.validators.util:validate_ipv6"
regex = "jsonspec.validators.util:validate_regex"
uri = "jsonspec.validators.util:validate_uri"
"css.color" = "jsonspec.validators.util:validate_css_color"
"rfc3339.datetime" = "jsonspec.validators.util:validate_rfc3339_datetime"
"utc.datetime" = "jsonspec.validators.util:validate_utc_datetime"
"utc.date" = "jsonspec.validators.util:validate_utc_date"
"utc.time" = "jsonspec.validators.util:validate_utc_time"
"utc.millisec" = "jsonspec.validators.util:validate_utc_millisec"

[tool.poetry.dependencies]
python = "^3.10"
termcolor = { version = "*", optional = true }
importlib-metadata = { version = ">=5.0.0", python = "<3.10" }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-flake8 = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
