[metadata]
project-url =
    Documentation, https://json-spec.readthedocs.org
    Atom feed, https://github.com/johnnoone/json-spec/commits/master.atom

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[pytest]
; addopts = tests/
; addopts = --cov jsonspec --cov-report html

[coverage:run]
branch = True
source =
  src/json

[coverage:html]
title = JSON Extensions report
