[metadata]
project-url =
    Documentation, https://json-spec.readthedocs.org
    Atom feed, https://github.com/johnnoone/json-spec/commits/master.atom
description-file = README.rst

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[pytest]
; addopts = tests/
; addopts = --cov jsonspec --cov-report html

[flake8]
exclude = jsonspec/_version.py
ignore = F403
max-complexity = 10
max-line-length = 80

[coverage:run]
branch = True
source =
  src/json

[coverage:html]
title = JSON Extensions report

[versioneer]
VCS = git
style = pep440
versionfile_source = src/jsonspec/_version.py
versionfile_build = jsonspec/_version.py
tag_prefix = v
parentdir_prefix = jsonspec-
